Join UI fixes
- Keyboard was covering form fields at the bottom of the Join page.
The problem was due to the ionic-keyboard plugin being out of date.
Removed and added it back to update.  Fixes Issue #21
- Provided more validation on the join page.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -33,6 +33,13 @@ $shots-bg:      '../img/shots.jpg';
   background-color: $cardinal;
 }
 
+.has-errors {
+  border-bottom: 3px solid #B83E2C;
+}
+
+.no-errors {
+  border-bottom: 3px solid green;
+}
 
 .item.item-beer {
   border-color: #111;
